<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_screen2">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_vertical|center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_marginBottom="20dp"
            android:textColor="@android:color/white"
            android:textSize="@dimen/slide_title"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="140dp"
            android:layout_height="129dp"
            android:contentDescription="Student Image"
            android:src="@drawable/icon_graduate" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:layout_marginTop="8pt"
            android:text="@string/head1"
            android:layout_gravity="center"
            android:textAlignment="inherit"
            android:textColor="@android:color/white"
            android:textSize="@dimen/slide_desc" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingLeft="@dimen/desc_padding"
            android:paddingRight="@dimen/desc_padding"
            android:text="@string/text1"

            android:layout_gravity="start"
            android:textAlignment="inherit"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

    </LinearLayout>

</RelativeLayout>