<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:visibility="visible"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatButton
            android:text="@string/app_name"
            android:textAlignment="center"
            android:padding="15dp"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_graduate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:background="@color/bg_screen2"
            android:padding="35dp"
            android:drawableLeft="@drawable/ic_graduate"
            android:drawableRight="@drawable/ic_rightarrow"
            android:drawableStart="@drawable/ic_graduate"
            android:drawableEnd="@drawable/ic_rightarrow"
            android:gravity="start|center|end"
            android:text="@string/head1"
            android:textColor="@android:color/white" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_bwoman"
            android:padding="35dp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bg_screen3"
            android:drawableLeft="@drawable/ic_bwoman"
            android:drawableRight="@drawable/ic_rightarrow"
            android:drawableStart="@drawable/ic_bwoman"
            android:drawableEnd="@drawable/ic_rightarrow"
            android:gravity="start|center|end"
            android:text="@string/head2"
            android:textColor="@android:color/white" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_lady"
            android:padding="35dp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bg_screen4"
            android:drawableLeft="@drawable/ic_ladyb"
            android:drawableRight="@drawable/ic_rightarrow"
            android:drawableStart="@drawable/ic_ladyb"
            android:drawableEnd="@drawable/ic_rightarrow"
            android:gravity="start|center|end"
            android:text="@string/head3"
            android:textColor="@android:color/white" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_story"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bg_screen5"
            android:drawableLeft="@drawable/ic_story"
            android:drawableRight="@drawable/ic_rightarrow"
            android:drawableStart="@drawable/ic_story"
            android:drawableEnd="@drawable/ic_rightarrow"
            android:gravity="start|center|end"
            android:padding="35dp"
            android:text="@string/head4"
            android:textAlignment="center"
            android:textColor="@android:color/white" />

        <android.support.v7.widget.AppCompatButton
            android:textAlignment="center"
            android:padding="15dp"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</ScrollView>