<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey"
    android:orientation="vertical">
    <android.support.v7.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="15dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="15dp"
    android:padding="15dp"
    android:background="@drawable/border">
    <TextView
        android:id="@+id/stitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textAlignment="center"
        android:textSize="18sp"
        android:layout_marginBottom="10pt"
        />
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/RelativeLayout01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            android:layout_marginBottom="6pt"
            android:id="@+id/link1"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:text="@string/category"
            tools:ignore="InvalidId" />
        <TextView
            android:id="@+id/scat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:layout_toRightOf="@id/link1"
            android:layout_toEndOf="@id/link1"
            android:layout_marginLeft="7pt"
            android:layout_marginStart="7pt"
            android:textAlignment="viewStart"
            android:layout_gravity="start"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            />
    </RelativeLayout>
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/RelativeLayout02"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="14sp"
        android:textAllCaps="true"
            android:id="@+id/link2"
            android:textStyle="bold"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/organizer"
        android:layout_marginBottom="6pt"
            tools:ignore="DuplicateIds" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:layout_toRightOf="@id/link2"
            android:layout_toEndOf="@id/link2"
            android:layout_marginLeft="6pt"
            android:layout_marginStart="6pt"
            android:textAlignment="viewStart"
            android:layout_gravity="start"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:id="@+id/sorg"
            />
    </RelativeLayout>
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/RelativeLayout07"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="14sp"
        android:id="@+id/link3"
        android:textAllCaps="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/eligible"
        android:textStyle="bold"
        android:layout_marginBottom="6pt"
        />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:layout_toRightOf="@id/link3"
            android:layout_toEndOf="@id/link3"
            android:layout_marginLeft="6pt"
            android:layout_marginStart="6pt"
            android:textAlignment="viewStart"
            android:layout_gravity="start"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:id="@+id/eligible"
            />
    </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:layout_marginBottom="10pt"
            android:id="@+id/description"
            />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/slink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:layout_gravity="center"
        android:text="@string/apply"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:visibility="visible"
        />
    </LinearLayout>
</LinearLayout>
